syntax = "proto3";
package twilightproject.nyks.volt;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "nyks/volt/params.proto";
import "nyks/volt/reserve.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/twilight-project/nyks/x/volt/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/twilight-project/nyks/volt/params";
  }
  // Queries a list of BtcReserve items.
	rpc BtcReserve(QueryBtcReserveRequest) returns (QueryBtcReserveResponse) {
		option (google.api.http).get = "/twilight-project/nyks/volt/btc_reserve";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryBtcReserveRequest {
}

message QueryBtcReserveResponse {
  repeated BtcReserve BtcReserves = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
